crates/hxy-010-lang/tests/snapshots/interp_basics__char_array_becomes_string.snap
---
source: crates/hxy-010-lang/tests/interp_basics.rs
expression: result
---
RunResult {
    nodes: [
        NodeOut {
            name: "greeting",
            ty: ScalarArray(
                S8,
                5,
            ),
            offset: 0,
            length: 5,
            value: Some(
                Str(
                    "hello",
                ),
            ),
            parent: None,
            attrs: [
                (
                    "hxy_endian",
                    "little",
                ),
            ],
        },
    ],
    diagnostics: [],
    return_value: None,
    terminal_error: None,
}
