crates/hxy-010-lang/tests/snapshots/interp_basics__function_call_returns_value.snap
---
source: crates/hxy-010-lang/tests/interp_basics.rs
expression: result
---
RunResult {
    nodes: [],
    diagnostics: [],
    return_value: None,
}
