crates/hxy-010-lang/tests/snapshots/interp_basics__reads_primitive_fields_little_endian.snap
---
source: crates/hxy-010-lang/tests/interp_basics.rs
expression: result
---
RunResult {
    nodes: [
        NodeOut {
            name: "magic",
            ty: Scalar(
                U8,
            ),
            offset: 0,
            length: 1,
            value: Some(
                Char {
                    value: 171,
                    kind: PrimKind {
                        class: Char,
                        width: 1,
                        signed: false,
                    },
                },
            ),
            parent: None,
            attrs: [],
        },
        NodeOut {
            name: "size",
            ty: Scalar(
                U32,
            ),
            offset: 1,
            length: 4,
            value: Some(
                UInt {
                    value: 16909060,
                    kind: PrimKind {
                        class: Int,
                        width: 4,
                        signed: false,
                    },
                },
            ),
            parent: None,
            attrs: [],
        },
        NodeOut {
            name: "offset",
            ty: Scalar(
                U64,
            ),
            offset: 5,
            length: 8,
            value: Some(
                UInt {
                    value: 723685415333072913,
                    kind: PrimKind {
                        class: Int,
                        width: 8,
                        signed: false,
                    },
                },
            ),
            parent: None,
            attrs: [],
        },
    ],
    diagnostics: [],
    return_value: None,
}
