crates/hxy-010-lang/tests/snapshots/interp_basics__typedef_enum_resolves_variant_name.snap
---
source: crates/hxy-010-lang/tests/interp_basics.rs
expression: result
---
RunResult {
    nodes: [
        NodeOut {
            name: "which",
            ty: EnumType(
                "KIND",
            ),
            offset: 0,
            length: 1,
            value: Some(
                Str(
                    "KIND_BAR",
                ),
            ),
            parent: None,
            attrs: [],
        },
    ],
    diagnostics: [],
    return_value: None,
}
