crates/hxy-010-lang/tests/snapshots/interp_basics__typedef_struct_with_nested_fields.snap
---
source: crates/hxy-010-lang/tests/interp_basics.rs
expression: result
---
RunResult {
    nodes: [
        NodeOut {
            name: "header",
            ty: StructType(
                "HEADER",
            ),
            offset: 0,
            length: 7,
            value: None,
            parent: None,
            attrs: [],
        },
        NodeOut {
            name: "version",
            ty: Scalar(
                U8,
            ),
            offset: 0,
            length: 1,
            value: Some(
                Char {
                    value: 1,
                    kind: PrimKind {
                        class: Char,
                        width: 1,
                        signed: false,
                    },
                },
            ),
            parent: Some(
                NodeIdx(
                    0,
                ),
            ),
            attrs: [],
        },
        NodeOut {
            name: "flags",
            ty: Scalar(
                U16,
            ),
            offset: 1,
            length: 2,
            value: Some(
                UInt {
                    value: 2,
                    kind: PrimKind {
                        class: Int,
                        width: 2,
                        signed: false,
                    },
                },
            ),
            parent: Some(
                NodeIdx(
                    0,
                ),
            ),
            attrs: [],
        },
        NodeOut {
            name: "crc",
            ty: Scalar(
                U32,
            ),
            offset: 3,
            length: 4,
            value: Some(
                UInt {
                    value: 3735928559,
                    kind: PrimKind {
                        class: Int,
                        width: 4,
                        signed: false,
                    },
                },
            ),
            parent: Some(
                NodeIdx(
                    0,
                ),
            ),
            attrs: [],
        },
    ],
    diagnostics: [],
    return_value: None,
}
