crates/hxy-010-lang/tests/snapshots/interp_basics__warning_emits_diagnostic.snap
---
source: crates/hxy-010-lang/tests/interp_basics.rs
expression: result
---
RunResult {
    nodes: [],
    diagnostics: [
        Diagnostic {
            message: "oh no",
            severity: Warning,
            file_offset: Some(
                0,
            ),
            template_line: None,
        },
    ],
    return_value: None,
    terminal_error: None,
}
