crates/hxy-010-lang/tests/snapshots/interp_basics__while_loop_reads_until_eof.snap
---
source: crates/hxy-010-lang/tests/interp_basics.rs
expression: result
---
RunResult {
    nodes: [
        NodeOut {
            name: "b",
            ty: Scalar(
                U8,
            ),
            offset: 0,
            length: 1,
            value: Some(
                Char {
                    value: 17,
                    kind: PrimKind {
                        class: Char,
                        width: 1,
                        signed: false,
                    },
                },
            ),
            parent: None,
            attrs: [],
        },
        NodeOut {
            name: "b",
            ty: Scalar(
                U8,
            ),
            offset: 1,
            length: 1,
            value: Some(
                Char {
                    value: 34,
                    kind: PrimKind {
                        class: Char,
                        width: 1,
                        signed: false,
                    },
                },
            ),
            parent: None,
            attrs: [],
        },
        NodeOut {
            name: "b",
            ty: Scalar(
                U8,
            ),
            offset: 2,
            length: 1,
            value: Some(
                Char {
                    value: 51,
                    kind: PrimKind {
                        class: Char,
                        width: 1,
                        signed: false,
                    },
                },
            ),
            parent: None,
            attrs: [],
        },
    ],
    diagnostics: [],
    return_value: None,
    terminal_error: None,
}
